Improve the docs
