# routes.js
@@ -10,15 +10,15 @@ var services = require('./js/services');
 var setupApi = function(app, cors) {
   var api = new Router();
   services.getRouters().forEach(function(service) {
-    api.use('/add/' + service.name, service.router);
+    api.use('/' + service.name + '/project', service.router);
   });
-  api.use('/save', require('./js/savejson'));
-  app.use('/api/v1/', cors(), api);
+  app.use('/v1/serice', cors(), api);
+  api.use('/v1/projects/saved', require('./js/savejson'));
 };
 
 var setupDocs = function(app) {
   app.get('/docs/v1/', function(req, res) {
-    res.sendFile(path.join(__dirname, 'docs', 'index.html'));
+    res.sendFile(path.join(__dirname, 'docs', 'index-2.html'));
   });
 };
 
@@ -32,8 +32,8 @@ module.exports = function(app, cors) {
     }
   };
 
-  setupApi(app, cors);
   setupDocs(app);
+  setupApi(app, cors);
 
   app.route('/*').get(function(req, res) {
     res.json({ error: "Sorry, this site is not supported" });
